igt@i915_module_load@reload-no-display|igt@gem_lmem_swapping@parallel-random-engines - incomplete/fail - RIP: 0010:fb_do_apertures_overlap.part
<4> [227.638317] general protection fault, probably for non-canonical address 0x6b6b6b6b6b6b6b6b: 0000 [#1] PREEMPT SMP NOPTI
<4> [227.638324] CPU: 10 PID: 1503 Comm: i915_module_loa Not tainted 5.17.0-rc7-CI-CI_DRM_11349+ #1
<4> [227.638329] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P LP5 RVP, BIOS ADLPFWI1.R00.2313.A00.2107301001 07/30/2021
<4> [227.638333] RIP: 0010:fb_do_apertures_overlap.part.14+0x26/0x60
<4> [227.638338] Code: 50 28 4c 00 8b 0e 85 c9 74 4e 41 57 41 56 49 c7 c6 78 8c 34 82 41 55 41 54 49 89 fc 55 48 89 f5 53 31 db 48 83 ec 10 48 63 c3 <41> 8b 14 24 48 c1 e0 04 4c 8d 6c 05 08 85 d2 0f 85 7d 70 49 00 83
<4> [227.638344] RSP: 0018:ffffc900012a7980 EFLAGS: 00010282
<4> [227.638347] RAX: 0000000000000000 RBX: 0000000000000000 RCX: 0000000000000002
<4> [227.638350] RDX: 0000000000000001 RSI: ffff88810de72440 RDI: 6b6b6b6b6b6b6b6b
<4> [227.638352] RBP: ffff88810de72440 R08: ffff8881105c09f0 R09: 00000000fffffffe
<4> [227.638354] R10: ffffc900012a7a10 R11: 000000005921484d R12: 6b6b6b6b6b6b6b6b
<4> [227.638357] R13: ffffffff82878540 R14: ffffffff82348c78 R15: 6b6b6b6b6b6b6b6b
<4> [227.638359] FS: 00007f5331f5fe40(0000) GS:ffff8882a7300000(0000) knlGS:0000000000000000
<4> [227.638362] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [227.638364] CR2: 000055ba86d97c68 CR3: 000000010fbc6002 CR4: 0000000000770ee0
<4> [227.638367] PKRU: 55555554
<4> [227.638368] Call Trace:
<4> [227.638370] <TASK>
<4> [227.638371] ? remove_conflicting_framebuffers+0x1f/0xc0
<4> [227.638375] do_remove_conflicting_framebuffers+0x59/0xa0
<4> [227.638378] remove_conflicting_framebuffers+0x2d/0xc0
<4> [227.638380] remove_conflicting_pci_framebuffers+0xc8/0x110
<4> [227.638383] drm_aperture_remove_conflicting_pci_framebuffers+0x52/0x70
<4> [227.638387] i915_driver_probe+0x609/0xe00 [i915]
<4> [227.638453] ? __pm_runtime_resume+0x4f/0x80
<4> [227.638457] i915_pci_probe+0x53/0x1f0 [i915]
<4> [227.638518] ? _raw_spin_unlock_irqrestore+0x3d/0x60
<4> [227.638522] pci_device_probe+0x95/0x110
<4> [227.638525] really_probe+0x1ac/0x390
<4> [227.638528] __driver_probe_device+0xf6/0x170
<4> [227.638530] driver_probe_device+0x1a/0x90
<4> [227.638533] __driver_attach+0x93/0x160
<4> [227.638535] ? __device_attach_driver+0xd0/0xd0
<4> [227.638538] ? __device_attach_driver+0xd0/0xd0
<4> [227.638540] bus_for_each_dev+0x72/0xc0
<4> [227.638542] bus_add_driver+0x14b/0x1f0
<4> [227.638544] driver_register+0x66/0xb0
<4> [227.638547] i915_init+0x1f/0x7e [i915]
<4> [227.638612] ? 0xffffffffa07a6000
<4> [227.638614] do_one_initcall+0x53/0x2e0
<4> [227.638617] ? do_init_module+0x1d/0x1e0
<4> [227.638621] ? rcu_read_lock_sched_held+0x4d/0x80
<4> [227.638624] ? kmem_cache_alloc_trace+0x1de/0x250
<4> [227.638627] do_init_module+0x45/0x1e0
<4> [227.638630] load_module+0x2740/0x29d0
<4> [227.638634] ? __do_sys_finit_module+0xaf/0x120
<4> [227.638636] __do_sys_finit_module+0xaf/0x120
<4> [227.638639] do_syscall_64+0x37/0xb0
<4> [227.638642] entry_SYSCALL_64_after_hwframe+0x44/0xae
<4> [227.638645] RIP: 0033:0x7f53315b8639
<4> [227.638647] Code: 00 f3 c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 1f f8 2c 00 f7 d8 64 89 01 48
<4> [227.638653] RSP: 002b:00007ffda8d03d98 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
<4> [227.638656] RAX: ffffffffffffffda RBX: 000055b3cccc07f0 RCX: 00007f53315b8639
<4> [227.638658] RDX: 0000000000000000 RSI: 000055b3cccc7d80 RDI: 0000000000000008
<4> [227.638661] RBP: 000055b3cccc7d80 R08: 0000000000000000 R09: 0000000000000000
<4> [227.638663] R10: 0000000000000008 R11: 0000000000000246 R12: 0000000000000000
<4> [227.638665] R13: 000055b3cccc3ad0 R14: 0000000000000020 R15: 0000000000000011
<4> [227.638669] </TASK>
<4> [227.638670] Modules linked in: i915(+) drm_dp_helper drm_kms_helper snd_hda_codec_hdmi mei_hdcp x86_pkg_temp_thermal snd_intel_dspcfg ttm snd_hda_codec coretemp drm_buddy snd_hwdep crct10dif_pclmul crc32_pclmul ghash_clmulni_intel snd_hda_core e1000e syscopyarea snd_pcm mei_me ptp sysfillrect sysimgblt pps_core mei intel_lpss_pci fb_sys_fops prime_numbers smsc75xx usbnet mii [last unloaded: drm_kms_helper]
<4> [227.638696] ---[ end trace 0000000000000000 ]--
@jani.saarinen Let me know if this is not displayed related issue.
Edited by LAKSHMINARAYANA VUDUM